fixes z-index and wrappers for links

--- a/sass/partials/global/_mixins.scss
+++ b/sass/partials/global/_mixins.scss
@@ -1,13 +1,11 @@
 @import "variables";
 
 @mixin control-inactive {
-  color: whiteSmoke;
-  color: rgba(255, 255, 255, 0.4);
+  color: darken(white, 45%);
 }
 
 @mixin control-active {
   color: white;
-  color: rgba(255, 255, 255, 1);
 }
 
 @mixin gallery($item-count) {
@@ -16,14 +14,17 @@
   @include keyframes(galleryAnimation-#{$item-count}) {
     0% {
       opacity: 0;
+      z-index: 0;
     }
     #{100% * $transition-duration / $total-duration},
     #{100% * $display-duration / $total-duration} {
       opacity: 1;
+      z-index: 1;
     }
     #{100% * ($display-duration + $transition-duration) / $total-duration},
     100% {
       opacity: 0;
+      z-index: 0;
     }
   }
 
@@ -52,6 +53,7 @@
       .control-operator:nth-of-type(#{$i}):target ~ .item:nth-of-type(#{$i}) {
         pointer-events: auto;
         opacity: 1;
+        z-index: 1;
       }
       .control-operator:nth-of-type(#{$i}):target ~ .controls .control-item:nth-of-type(#{$i}) {
         @include control-active;
